--- a/code/practice.css
+++ b/code/practice.css
@@ -134,7 +134,7 @@
   position: relative;
   bottom: 8vmax;
   right: 3vmax;
-  width: 34vmax;
+  width: 40vmax;
   align-items: center;
   justify-content: space-between;
 }
